# 1D-Cellular-Automata

./: .gitignore  README.md  main.py  main_fast.py  pyproject.toml
